--- a/web_ui/static/hiddenUI.css
+++ b/web_ui/static/hiddenUI.css
@@ -41,7 +41,7 @@ header {
 }
 
 #deckDaddy > img{
-    width: 50%;
+    width: 40%;
     height: 90%;
     margin: 5%;
 }
@@ -71,18 +71,19 @@ header {
     height: fit-content;
 }
 
-#runs , #sets {
+
+.agentDeclared{
+    background-color: darkmagenta;
+    width: 20%;
+    height: 20%;
     display: flex;
     flex-direction: column;
-    text-align: start;
-
 }
-
-#runs , #sets > div {
+#declaredCards{
     display: flex;
     flex-direction: row;
-
 }
+
 #requests{
     background-color: beige;
     width: fit-content;
