--- a/web_ui/templates/hiddenUI.html
+++ b/web_ui/templates/hiddenUI.html
@@ -340,8 +340,8 @@
 
     <div id="parent">
             <div id="deckDaddy">
-                <img src="" id="discardImg" alt="">
-                <img id="deckImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Card_back_01.svg/1200px-Card_back_01.svg.png" draggable="false" alt="">
+                <img src="" id="discardImg" class="table-cards" alt="">
+                <img id="deckImg" class="table-cards" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Card_back_01.svg/1200px-Card_back_01.svg.png" draggable="false" alt="">
             </div>
         <div id="hand">
 
