--- a/web_ui/static/hiddenUI.css
+++ b/web_ui/static/hiddenUI.css
@@ -98,3 +98,10 @@ header {
     width: fit-content;
     height: fit-content;
 }
+
+#turnIndicator{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+}
